              (Noble Paul, shalin)

4. SOLR-833:  A DataSource to read data from a field as a reader. This can be used, for example, to read XMLs
              residing as CLOBs or BLOBs in databases.
              (Noble Paul via shalin)

5. SOLR-887:  A Transformer to strip HTML tags.
              (Ahmed Hammad via shalin)

6. SOLR-886: DataImportHandler should rollback when an import fails or it is aborted (shalin)

Optimizations
----------------------


Bug Fixes
----------------------
1. SOLR-800:  Deep copy collections to avoid ConcurrentModificationException in XPathEntityprocessor while streaming
              (Kyle Morrison, Noble Paul via shalin)

2. SOLR-823:  Request parameter variables ${dataimporter.request.xxx} are not resolved
              (Mck SembWever, Noble Paul, shalin)

3. SOLR-728:  Add synchronization to avoid race condition of multiple imports working concurrently
              (Walter Ferrara, shalin)

4. SOLR-742:  Add ability to create dynamic fields with custom DataImportHandler transformers
              (Wojtek Piaseczny, Noble Paul, shalin)

5. SOLR-832:  Rows parameter is not honored in non-debug mode and can abort a running import in debug mode.
              (Akshay Ukey, shalin)

6. SOLR-838:  The VariableResolver obtained from a DataSource's context does not have current data.
              (Noble Paul via shalin)

7. SOLR-864:  DataImportHandler does not catch and log Errors (shalin)

8. SOLR-873:  Fix case-sensitive field names and columns (Jon Baer, shalin)

9. SOLR-893:  Unable to delete documents via SQL and deletedPkQuery with deltaimport
              (Dan Rosher via shalin)

10. SOLR-888: DateFormatTransformer cannot convert non-string type
              (Amit Nithian via shalin)

Documentation
----------------------

Other
----------------------
1. SOLR-782: Refactored SolrWriter to make it a concrete class and removed wrappers over SolrInputDocument
             (Noble Paul via shalin)
